--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,158 @@
+body {
+  width: 100vw;
+  height: 90vh;
+}
+
+#root {
+  height: 100%;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 100%;
+}
+
+.letter-wrapper {
+  position: relative;
+  transform-style: preserve-3d;
+  transition: all 600ms ease-in-out;
+}
+
+.flip .letter-wrapper {
+  transform: rotateX(180deg);
+}
+
+.flip .letter-wrapper:nth-child(2) {
+  transition-delay: 250ms !important;
+}
+
+.flip .letter-wrapper:nth-child(3) {
+  transition-delay: 500ms !important;
+}
+
+.flip .letter-wrapper:nth-child(4) {
+  transition-delay: 750ms !important;
+}
+
+.flip .letter-wrapper:nth-child(5) {
+  transition-delay: 1000ms !important;
+}
+
+.letter-wrapper .letter-guess {
+  /* position: absolute; */
+  backface-visibility: hidden;
+}
+
+.letter-guess {
+  width: 60px;
+  height: 60px;
+  border: 1px solid lightgray;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  font-size: 35px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin: 2px;
+}
+
+.front {
+  position: absolute;
+  background-color: white !important;
+  color: black !important;
+}
+
+.back {
+  transform: rotateX(180deg);
+}
+
+.letter-filled {
+  animation: increase .2s ease-out;
+  border-color: gray;
+  animation-iteration-count: 1;
+}
+
+/* @keyframes increase {
+  0% {transform: scale(1,1);}
+  50% {transform: scale(1.05,1.05);}
+  100% {transform: scale(1,1);}
+} */
+
+@keyframes increase {
+  0% {transform: scale(1,1);}
+  50% {transform: scale(1.05,1.05);}
+  100% {transform: scale(1,1);}
+}
+
+.game-row {
+  display: flex;
+}
+
+.keyboard-row {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+}
+
+.keyboard-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 80px;
+}
+
+.keyboard-key {
+  color: white;
+  width: 50px;
+  height: 50px;
+  font-size: 25px;
+  text-transform: capitalize;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #818384;
+  border-radius: 5px;
+  margin: 2px;
+  user-select: none;
+}
+
+.previous-guesses .letter-guess {
+  background-color: gray;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.letter-yellow {
+  background-color: #b59f3b !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.letter-green {
+  background-color: #538d4e !important;
+}
+
+.a .letter-red {
+  background-color: rgb(75, 75, 75) !important;
+}
+
+.shake-row {
+  animation: shake 0.5s;
+  animation-iteration-count: 1;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
