--- a/src/App.css
+++ b/src/App.css
@@ -17,14 +17,20 @@ body {
 .letter-wrapper {
   position: relative;
   transform-style: preserve-3d;
-  transition: all 600ms ease-in-out;
+  transition: all 1200ms cubic-bezier(0.22, 0.61, 0.36, 1.02);
 }
 
 .flip .letter-wrapper {
   transform: rotateX(180deg);
 }
 
+.flip .letter-wrapper:nth-child(1) {
+  transform: rotateX(900deg);
+  transition-duration: 3600ms;
+}
+
 .flip .letter-wrapper:nth-child(2) {
+  transform: rotateX(540deg);
   transition-delay: 250ms !important;
 }
 
@@ -37,11 +43,12 @@ body {
 }
 
 .flip .letter-wrapper:nth-child(5) {
+  transform: rotateX(540deg);
+  transition-duration: 2400ms;
   transition-delay: 1000ms !important;
 }
 
 .letter-wrapper .letter-guess {
-  /* position: absolute; */
   backface-visibility: hidden;
 }
 
@@ -73,12 +80,6 @@ body {
   border-color: gray;
   animation-iteration-count: 1;
 }
-
-/* @keyframes increase {
-  0% {transform: scale(1,1);}
-  50% {transform: scale(1.05,1.05);}
-  100% {transform: scale(1,1);}
-} */
 
 @keyframes increase {
   0% {transform: scale(1,1);}
@@ -126,29 +127,36 @@ body {
   color: white;
 }
 
-.letter-yellow {
+.yellow {
+  color: white;
   background-color: #b59f3b !important;
 }
 
-.letter-green {
+.green {
+  color: white;
   background-color: #538d4e !important;
 }
 
-.a .letter-red {
+.grey {
+  color: white;
+  background-color: #818384 !important;
+}
+
+.dark-grey {
   background-color: rgb(75, 75, 75) !important;
 }
 
 .shake-row {
-  animation: shake 0.5s;
+  animation: shake 0.6s;
   animation-iteration-count: 1;
 }
 
 @keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
+  0% { transform: translate(2px, 2px) rotate(0deg); }
   10% { transform: translate(-1px, -2px) rotate(-1deg); }
   20% { transform: translate(-3px, 0px) rotate(1deg); }
   30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
+  40% { transform: translate(2px, -2px) rotate(1deg); }
   50% { transform: translate(-1px, 2px) rotate(-1deg); }
   60% { transform: translate(-3px, 1px) rotate(0deg); }
   70% { transform: translate(3px, 1px) rotate(-1deg); }
