--- a/src/App.scss
+++ b/src/App.scss
@@ -151,6 +151,14 @@ body {
   animation-iteration-count: 1;
 }
 
+.hide {
+  display: none !important;
+}
+
+.show {
+  display: initial !important;
+}
+
 @keyframes shake {
   0% { transform: translate(2px, 2px) rotate(0deg); }
   10% { transform: translate(-1px, -2px) rotate(-1deg); }
