--- a/src/components/StatsModal/index.scss
+++ b/src/components/StatsModal/index.scss
@@ -40,16 +40,17 @@
   line-height: 20px;
   color: white;
   font-size: 12px;
+  margin: 2px;
 }
 
 .filled-bar {
   height: 100%;
   text-align: right;
-  padding-right: 5px;
+  padding-right: 4px;
   transition: width 0.2s ease-in-out;
 }
 
 .modal-heading {
-  // font-size: 12px;
-  // font-weight: 400;
+  font-size: 18px;
+  font-weight: 400;
 }
