--- a/src/App.scss
+++ b/src/App.scss
@@ -7,10 +7,6 @@ body {
   height: 100%;
 }
 .App {
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
   height: 100%;
 }
 
@@ -98,14 +94,6 @@ body {
   justify-content: center;
 }
 
-.keyboard-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-top: 80px;
-}
-
 .keyboard-key {
   color: white;
   width: 50px;
@@ -157,6 +145,54 @@ body {
 
 .show {
   display: initial !important;
+}
+
+.icon-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.icon-button:hover {
+  transition: all .1s ease-in-out;
+  transform: scale(1.3,1.3);
+}
+
+.button {
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #538d4e;
+  color: white;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 600;
+  border: none;
+  transition: all 0.2s ease-in-out;
+}
+
+.button:hover {
+  background-color: darkgreen;
+}
+
+.flex {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.margin-top {
+  margin-top: 24px;
+}
+
+.game-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 @keyframes shake {
