--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -13,8 +13,24 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50vw;
-  height: 50vh;
+  width: 90%;
+  max-width: 400px;
   background-color: white;
-  border: 1px solid black;
+  box-shadow: 0px 3px 9px -1px rgba(0,0,0,0.39);
+  border-radius: 5px;
+  padding: 10px;
+  min-height: 400px;
+}
+
+.modal-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.modal-close {
+  position: absolute;
+  right: 10px;
+  top: 15px;
 }
