--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,10 @@ body {
   height: 90vh;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 #root {
   height: 100%;
 }
@@ -155,7 +159,12 @@ body {
 
 .icon-button:hover {
   transition: all .1s ease-in-out;
-  transform: scale(1.3,1.3);
+  transform: scale(1.2,1.2);
+}
+
+.icon-button:active {
+  // transition: all .1s ease-in-out;
+  transform: scale(1,1);
 }
 
 .button {
