--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -2,15 +2,21 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(230, 228, 225, 0.2);
-  backdrop-filter: blur(4px);
+  backdrop-filter: blur(3px);
   position: absolute;
   top: 0;
+  opacity: 0;
   left: 0;
+  transition: opacity 100ms linear;
+}
+
+.fade {
+  opacity: 1;
 }
 
 .modal-container {
   position: absolute;
-  top: 50%;
+  top: 150%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 90%;
@@ -20,6 +26,7 @@
   border-radius: 5px;
   padding: 10px;
   min-height: 400px;
+  transition: all 100ms linear;
 }
 
 .modal-section{
@@ -27,6 +34,10 @@
   flex-direction: column;
   align-items: center;
   padding: 10px 20px;
+}
+
+.modal-show {
+  top: 50%;
 }
 
 .modal-close {
