--- a/src/components/Notification/index.scss
+++ b/src/components/Notification/index.scss
@@ -8,9 +8,10 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0px 3px 9px -1px rgba(0,0,0,0.39);
-  transition: top .2s ease-in-out;
-  top: -100px;
+  transition: all 100ms cubic-bezier(1, 0.25, 0.82, 1.13);
+  top: 0px;
   left: 50%;
+  opacity: 0;
   transform: translateX(-50%);
 }
 
@@ -23,5 +24,6 @@
 }
 
 .move {
+  opacity: 1;
   top: 50px;
 }
