make stats work with 6 letter

--- a/src/App.scss
+++ b/src/App.scss
@@ -56,6 +56,10 @@ body {
   transition-delay: 1000ms !important;
 }
 
+.flip .letter-wrapper:nth-child(6) {
+  transition-delay: 1250ms !important;
+}
+
 .letter-wrapper .letter-guess {
   backface-visibility: hidden;
 }
